--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -45,12 +45,31 @@
 				<div class="container">
 					<ul class="header-links pull-left">
 						<li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-						<li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
-						<li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
+						<li><a href="#"><i class="fa fa-envelope-o"></i> empty300@mail.ru</a></li>
+						<li><a href="#"><i class="fa fa-map-marker"></i> г. Иркутск</a></li>
 					</ul>
 					<ul class="header-links pull-right">
-						<li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-						<li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+                        {% if user.is_authenticated %}
+						<li><div class="dropdown">
+                                <a href="#"><i class="fa fa-user"></i>{{ user.username }}</a>
+                                <div class="dropdown-content">
+                                    <div class="cart-list">
+                                        <a href="{% url 'users:profile' user.id %}">Мой профиль</a>
+                                        <a href="#">Мои заказы</a>
+                                        <a href="{% url 'users:logout' %}">Выйти</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                            {% if user.is_superuser %}
+                            <li><a class="dropdown-item" href="{% url 'admin:index' %}">Админ-панель</a></li>
+
+                            {% endif %}
+                        {% else %}
+                        <li><a href="{% url 'users:login' %}"><i class="fa fa-user"></i>Войти</a></li>
+                        <li><a href="{% url 'users:registration' %}"><i class="fa fa-user-plus"></i>Регистрация</a></li>
+                        {% endif %}
+
 					</ul>
 				</div>
 			</div>
@@ -172,9 +191,8 @@
 				<div id="responsive-nav">
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
-						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#">Hot Deals</a></li>
-						<li><a href="#">Categories</a></li>
+						<li class="active"><a href="{% url 'index'  %}">На главную</a></li>
+						<li><a href="{% url 'products:index'  %}">Категории</a></li>
 						<li><a href="#">Laptops</a></li>
 						<li><a href="#">Smartphones</a></li>
 						<li><a href="#">Cameras</a></li>
@@ -189,43 +207,6 @@
 		<!-- /NAVIGATION -->
 {%  block content %}    {% endblock %}
 
-		<!-- NEWSLETTER -->
-		<div id="newsletter" class="section">
-			<!-- container -->
-			<div class="container">
-				<!-- row -->
-				<div class="row">
-					<div class="col-md-12">
-						<div class="newsletter">
-							<p>Sign Up for the <strong>NEWSLETTER</strong></p>
-							<form>
-								<input class="input" type="email" placeholder="Enter Your Email">
-								<button class="newsletter-btn"><i class="fa fa-envelope"></i> Subscribe</button>
-							</form>
-							<ul class="newsletter-follow">
-								<li>
-									<a href="#"><i class="fa fa-facebook"></i></a>
-								</li>
-								<li>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</li>
-								<li>
-									<a href="#"><i class="fa fa-instagram"></i></a>
-								</li>
-								<li>
-									<a href="#"><i class="fa fa-pinterest"></i></a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<!-- /row -->
-			</div>
-			<!-- /container -->
-		</div>
-		<!-- /NEWSLETTER -->
-
-		<!-- FOOTER -->
 		<footer id="footer">
 			<!-- top footer -->
 			<div class="section">
