--- a/products/templates/products/store.html
+++ b/products/templates/products/store.html
@@ -218,20 +218,18 @@
 
                 <!-- store products -->
                 <div class="row">
-                    {% for i in 'aaaaaaaaa' %}
+                    {% for product in object_list %}
                         <div class="col-md-4 col-xs-6">
                             <div class="product">
                                 <div class="product-img">
-                                    <img src="{% static 'img/product01.png' %}" alt="">
+                                    <img src="{{ product.image }}" alt="">
                                     <div class="product-label">
-                                        <span class="sale">-30%</span>
-                                        <span class="new">NEW</span>
                                     </div>
                                 </div>
                                 <div class="product-body">
-                                    <p class="product-category">Category</p>
-                                    <h3 class="product-name"><a href="#">product name goes here</a></h3>
-                                    <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+                                    <p class="product-category">{{ product.category }}</p>
+                                    <h3 class="product-name"><a href="#">{{ product.name }}</a></h3>
+                                    <h4 class="product-price">{{ product.price }}
                                     <div class="product-rating">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
@@ -252,6 +250,7 @@
                         </div>
                     {% endfor %}
                 </div>
+
                 <!-- /store products -->
 
                 <!-- store bottom filter -->
