--- a/products/templates/products/store.html
+++ b/products/templates/products/store.html
@@ -1,27 +1,6 @@
 {% extends 'products/base.html' %}
 {% load static %}
 {%  block content %}
-<!-- BREADCRUMB -->
-<div id="breadcrumb" class="section">
-    <!-- container -->
-    <div class="container">
-        <!-- row -->
-        <div class="row">
-            <div class="col-md-12">
-                <ul class="breadcrumb-tree">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">All Categories</a></li>
-                    <li><a href="#">Accessories</a></li>
-                    <li class="active">Headphones (227,490 Results)</li>
-                </ul>
-            </div>
-        </div>
-        <!-- /row -->
-    </div>
-    <!-- /container -->
-</div>
-<!-- /BREADCRUMB -->
-
 <!-- SECTION -->
 <div class="section">
     <!-- container -->
@@ -31,65 +10,25 @@
             <!-- ASIDE -->
             <div id="aside" class="col-md-3">
                 <!-- aside Widget -->
+            <form action="{% url 'products:filter' %}" method="get" >
                 <div class="aside">
-                    <h3 class="aside-title">Categories</h3>
+                    <h3 class="aside-title">Категории</h3>
                     <div class="checkbox-filter">
+                        {% for category in categories %}
+                            <div class="input-checkbox">
+                                <input id="{{ category.id }}" type="checkbox" name="Category" value="{{ category.id }}">
+                                <label for={{ category.id }}>
+                                    <span></span>
+                                    {{ category.name }}
+                                    <small>{{ category.items_count }}</small>
+                                </label>
+                            </div>
+                        {% endfor %}
 
-                        <div class="input-checkbox">
-                            <input type="checkbox" id="category-1">
-                            <label for="category-1">
-                                <span></span>
-                                Laptops
-                                <small>(120)</small>
-                            </label>
-                        </div>
-
-                        <div class="input-checkbox">
-                            <input type="checkbox" id="category-2">
-                            <label for="category-2">
-                                <span></span>
-                                Smartphones
-                                <small>(740)</small>
-                            </label>
-                        </div>
-
-                        <div class="input-checkbox">
-                            <input type="checkbox" id="category-3">
-                            <label for="category-3">
-                                <span></span>
-                                Cameras
-                                <small>(1450)</small>
-                            </label>
-                        </div>
-
-                        <div class="input-checkbox">
-                            <input type="checkbox" id="category-4">
-                            <label for="category-4">
-                                <span></span>
-                                Accessories
-                                <small>(578)</small>
-                            </label>
-                        </div>
-
-                        <div class="input-checkbox">
-                            <input type="checkbox" id="category-5">
-                            <label for="category-5">
-                                <span></span>
-                                Laptops
-                                <small>(120)</small>
-                            </label>
-                        </div>
-
-                        <div class="input-checkbox">
-                            <input type="checkbox" id="category-6">
-                            <label for="category-6">
-                                <span></span>
-                                Smartphones
-                                <small>(740)</small>
-                            </label>
-                        </div>
                     </div>
                 </div>
+                <button type="submit">Найти</button>
+
                 <!-- /aside Widget -->
 
                 <!-- aside Widget -->
@@ -116,74 +55,22 @@
                 <div class="aside">
                     <h3 class="aside-title">Brand</h3>
                     <div class="checkbox-filter">
-                        <div class="input-checkbox">
-                            <input type="checkbox" id="brand-1">
-                            <label for="brand-1">
-                                <span></span>
-                                SAMSUNG
-                                <small>(578)</small>
-                            </label>
-                        </div>
-                        <div class="input-checkbox">
-                            <input type="checkbox" id="brand-2">
-                            <label for="brand-2">
-                                <span></span>
-                                LG
-                                <small>(125)</small>
-                            </label>
-                        </div>
-                        <div class="input-checkbox">
-                            <input type="checkbox" id="brand-3">
-                            <label for="brand-3">
-                                <span></span>
-                                SONY
-                                <small>(755)</small>
-                            </label>
-                        </div>
-                        <div class="input-checkbox">
-                            <input type="checkbox" id="brand-4">
-                            <label for="brand-4">
-                                <span></span>
-                                SAMSUNG
-                                <small>(578)</small>
-                            </label>
-                        </div>
-                        <div class="input-checkbox">
-                            <input type="checkbox" id="brand-5">
-                            <label for="brand-5">
-                                <span></span>
-                                LG
-                                <small>(125)</small>
-                            </label>
-                        </div>
-                        <div class="input-checkbox">
-                            <input type="checkbox" id="brand-6">
-                            <label for="brand-6">
-                                <span></span>
-                                SONY
-                                <small>(755)</small>
-                            </label>
-                        </div>
+                        {% for brand in brands %}
+                            <div class="input-checkbox">
+                                <input id="{{ brand.brand }}" type="checkbox" name="Brand" value="{{ brand.brand }}">
+                                    <label for={{ brand.brand }}>
+                                        <span></span>
+                                        {{ brand.brand }}
+                                    <small></small>
+                                </label>
+                            </div>
+                        {% endfor %}
+                    </form>
                     </div>
                 </div>
                 <!-- /aside Widget -->
 
-                <!-- aside Widget -->
-                <div class="aside">
-                    <h3 class="aside-title">Top selling</h3>
-                    {% for i in 'aaa' %}
-                        <div class="product-widget">
-                            <div class="product-img">
-                                <img src="{% static '/img/product01.png' %}" alt="">
-                            </div>
-                            <div class="product-body">
-                                <p class="product-category">Category</p>
-                                <h3 class="product-name"><a href="#">product name goes here</a></h3>
-                                <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
+
                 <!-- /aside Widget -->
             </div>
             <!-- /ASIDE -->
@@ -222,14 +109,22 @@
                         <div class="col-md-4 col-xs-6">
                             <div class="product">
                                 <div class="product-img">
-                                    <img src="{{ product.image }}" alt="">
+                                    <img src="{{ product.image1 }}" alt="">
+                                    {% if product.discount %}
                                     <div class="product-label">
+                                        <span class="new"><strong>-{{ product.discount }}%</strong></span>
                                     </div>
+                                    {% endif %}
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">{{ product.category }}</p>
-                                    <h3 class="product-name"><a href="#">{{ product.name }}</a></h3>
-                                    <h4 class="product-price">{{ product.price }}
+                                    <h3 class="product-name"><a href="{% url 'products:product' product.slug %}">{{ product.name }}</a></h3>
+                                    {% if product.price_now %}
+                                    <h3 class="product-price">{{ product.price_now }}₽<del class="product-old-price">
+                                        {{product.price_old}}₽</del>
+                                    {% else %}
+                                        <h3 class="product-price">{{ product.price_old }}₽
+                                    {% endif %}
                                     <div class="product-rating">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
@@ -274,3 +169,4 @@
 </div>
 <!-- /SECTION -->
 {% endblock %}
+
