--- a/static/css/style.css
+++ b/static/css/style.css
@@ -894,7 +894,7 @@ textarea.input {
 .product .product-img .product-label>span {
   border: 2px solid;
   padding: 2px 10px;
-  font-size: 12px;
+  font-size: 16px;
 }
 
 .product .product-img .product-label>span.sale {
@@ -1585,7 +1585,8 @@ textarea.input {
   font-size: 12px;
   text-transform: uppercase;
   margin-right: 15px;
-  margin-bottom: 0px;
+  margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .product-details .add-to-cart .qty-label .input-number {
@@ -1880,8 +1881,26 @@ textarea.input {
   border-left: 1px solid #E4E7ED;
   border-bottom: 1px solid #E4E7ED;
 }
-
+.order-details1 {
+  position: relative;
+  padding: 0px 30px 30px;
+  margin-top: -120px;
+  border-right: 1px solid #E4E7ED;
+  border-left: 1px solid #E4E7ED;
+  border-bottom: 1px solid #E4E7ED;
+}
 .order-details:before {
+  content: "";
+  position: absolute;
+  left: -1px;
+  right: -1px;
+  top: -15px;
+  height: 30px;
+  border-top: 1px solid #E4E7ED;
+  border-left: 1px solid #E4E7ED;
+  border-right: 1px solid #E4E7ED;
+}
+.order-details1:before {
   content: "";
   position: absolute;
   left: -1px;
@@ -2130,6 +2149,24 @@ textarea.input {
   right: -20px;
 }
 
+.items-text {
+	overflow: hidden;
+	position: relative;
+	height: 140px;
+}
+.items-text:after {
+	content: "";
+	text-align: right;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	height: 1.2em;
+	background: linear-gradient(to bottom, rgba(255, 255, 255, 0), white 100%);
+	pointer-events: none;
+}
+
+
 /*----------------------------*\
 	Dots
 \*----------------------------*/
@@ -2235,7 +2272,7 @@ textarea.input {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    margin-top: 3px;
+    margin-top: 1px;
 }
 
 /* Links inside the dropdown */
