--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -34,6 +34,7 @@
 		<!--[if lt IE 9]>
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+
 		<![endif]-->
 
     </head>
@@ -110,57 +111,51 @@
 						<!-- ACCOUNT -->
 						<div class="col-md-3 clearfix">
 							<div class="header-ctn">
-								<!-- Wishlist -->
-								<div>
-									<a href="#">
-										<i class="fa fa-heart-o"></i>
-										<span>Your Wishlist</span>
-										<div class="qty">2</div>
-									</a>
-								</div>
-								<!-- /Wishlist -->
-
-								<!-- Cart -->
 								<div class="dropdown">
 									<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
 										<i class="fa fa-shopping-cart"></i>
-										<span>Your Cart</span>
-										<div class="qty">3</div>
+										<span>Корзина</span>
+										<div class="qty">{{ baskets.total_quantity}}</div>
 									</a>
-									<div class="cart-dropdown">
-										<div class="cart-list">
-											<div class="product-widget">
-												<div class="product-img">
-													<img src="{% static '/img/product01.png' %}" alt="">
-												</div>
-												<div class="product-body">
-													<h3 class="product-name"><a href="#">product name goes here</a></h3>
-													<h4 class="product-price"><span class="qty">1x</span>$980.00</h4>
-												</div>
-												<button class="delete"><i class="fa fa-close"></i></button>
-											</div>
+                                    {% if baskets %}
 
-											<div class="product-widget">
-												<div class="product-img">
-													<img src="{% static '/img/product02.png' %}" alt="">
-												</div>
-												<div class="product-body">
-													<h3 class="product-name"><a href="#">product name goes here</a></h3>
-													<h4 class="product-price"><span class="qty">3x</span>$980.00</h4>
-												</div>
-												<button class="delete"><i class="fa fa-close"></i></button>
-											</div>
-										</div>
-										<div class="cart-summary">
-											<small>3 Item(s) selected</small>
-											<h5>SUBTOTAL: $2940.00</h5>
-										</div>
-										<div class="cart-btns">
-											<a href="#">View Cart</a>
-											<a href="#">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
-										</div>
-									</div>
-								</div>
+                                            <div class="cart-dropdown">
+                                        {% for basket in baskets %}
+                                                <div class="cart-list">
+                                                    <div class="product-widget">
+                                                        <div class="product-img">
+                                                            <img src="{{ basket.product.image1 }}" alt="">
+                                                        </div>
+                                                        <div class="product-body">
+                                                            <h3 class="product-name"><a href="#">{{ basket.product.name }}</a></h3>
+                                                            <h4 class="product-price"><span class="qty">{{ basket.quantity }}x</span>{{ basket.sum }} руб.</h4>
+                                                        </div>
+                                                        <a class="delete"href="{% url 'products:basket_remove' basket.id %}"><i class="fa fa-close"></i></a>
+                                                    </div>
+                                                </div>
+                                        {% endfor %}
+                                                <div class="cart-summary">
+                                                    <small>{{ baskets.total_quantity}} Добавленно товаров</small>
+                                                    <h5>Цена за всё: {{ baskets.total_sum }} руб.</h5>
+                                                </div>
+                                                <div class="cart-btns">
+                                                    <a href="{% url 'users:profile' user.id %}">Подробнее</a>
+                                                    <a href="#">Заказать<i class="fa fa-arrow-circle-right"></i></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    {% else %}
+                                        <div class="cart-dropdown">
+                                            <div class="cart-list">
+
+                                                <div class="product-widget">
+                                                    <div class="product-body">
+                                                        <h3 class="product-name"><a href="#">Корзина пуста</a></h3>
+                                                    </div>
+                                                </div>
+                                        </div></div>
+
+                                {%  endif %}
 								<!-- /Cart -->
 
 								<!-- Menu Toogle -->
@@ -309,6 +304,9 @@
 		<script src="{% static 'js/nouislider.min.js' %}"></script>
 		<script src="{% static 'js/jquery.zoom.min.js' %}"></script>
 		<script src="{% static 'js/main.js' %}"></script>
+        <script src="{% static 'js/checkbox.js' %}"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 
 	</body>
 </html>
