--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1055,7 +1055,7 @@ textarea.input {
   background-color: #ef233c;
   color: #FFF;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 600;
   border-radius: 40px;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
@@ -1883,8 +1883,8 @@ textarea.input {
 }
 .order-details1 {
   position: relative;
-  padding: 0px 30px 30px;
-  margin-top: -120px;
+  padding: 0px 10px 40px;
+  margin-top: 13px;
   border-right: 1px solid #E4E7ED;
   border-left: 1px solid #E4E7ED;
   border-bottom: 1px solid #E4E7ED;
@@ -2100,6 +2100,46 @@ textarea.input {
   display: block;
 }
 
+.limited {
+    max-height: 170px;
+    overflow: hidden;
+    position: relative;
+}
+
+.limited .bottom {
+    position: absolute;
+    bottom: 0;
+    background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,1) 80%);
+    width: 100%;
+    height: 60px;
+    opacity: 1;
+    transition: .3s;
+}
+.read-more-checker {
+    opacity: 0;
+    position: absolute;
+}
+.read-more-checker:checked ~ .limited {
+    max-height: none;
+}
+.read-more-checker:checked ~ .limited .bottom {
+    opacity: 0;
+    transition: .3s;
+}
+.read-more-checker ~ .read-more-button:before {
+    content: 'Показать все';
+}
+.read-more-checker:checked ~ .read-more-button:before {
+    content: 'Скрыть';
+}
+.read-more-button {
+    cursor: pointer;
+    display: inline-block;
+    padding: 10px;
+    color: #777;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
 /*=========================================================
 	12 -> SLICK STYLE
 ===========================================================*/
@@ -2153,6 +2193,11 @@ textarea.input {
 	overflow: hidden;
 	position: relative;
 	height: 140px;
+}
+.items-text1 {
+	overflow: hidden;
+	position: relative;
+	height: 50px;
 }
 .items-text:after {
 	content: "";
