--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -29,7 +29,7 @@
                         {{ form.password1 }}
                         {{ form.password2 }}
 
-                        <button class="primary-btn cta-btn">Зарегестрироваться</button>
+                        <button onclick="this.form.submit()" class="primary-btn cta-btn">Зарегестрироваться</button>
                     </form>
                 </div>
             </div>
