--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -95,14 +95,9 @@
 						<!-- SEARCH BAR -->
 						<div class="col-md-6">
 							<div class="header-search">
-								<form>
-									<select class="input-select">
-										<option value="0">All Categories</option>
-										<option value="1">Category 01</option>
-										<option value="1">Category 02</option>
-									</select>
-									<input class="input" placeholder="Search here">
-									<button class="search-btn">Search</button>
+								<form action="{% url 'products:index' %}" method="get" id="form1" name="theForm">
+									<input class="input1" placeholder="Search here" name="Search">
+                                    <button class="search-btn" onclick="this.form.submit()">Search</button>
 								</form>
 							</div>
 						</div>
@@ -112,9 +107,11 @@
 						<div class="col-md-3 clearfix">
 							<div class="header-ctn">
 								<div class="dropdown">
+                                {% if user.is_authenticated %}
 									<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
 										<i class="fa fa-shopping-cart"></i>
 										<span>Корзина</span>
+
 										<div class="qty">{{ baskets.total_quantity}}</div>
 									</a>
                                     {% if baskets %}
@@ -127,7 +124,7 @@
                                                             <img src="{{ basket.product.image1 }}" alt="">
                                                         </div>
                                                         <div class="product-body">
-                                                            <h3 class="product-name"><a href="#">{{ basket.product.name }}</a></h3>
+                                                            <h3 class="product-name"><a href="{% url 'products:product' basket.product.slug %}">{{ basket.product.name }} {{ basket.color }}</a></h3>
                                                             <h4 class="product-price"><span class="qty">{{ basket.quantity }}x</span>{{ basket.sum }} руб.</h4>
                                                         </div>
                                                         <a class="delete"href="{% url 'products:basket_remove' basket.id %}"><i class="fa fa-close"></i></a>
@@ -156,6 +153,21 @@
                                         </div></div>
 
                                 {%  endif %}
+                            {% else %}
+                                    <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+										<i class="fa fa-shopping-cart"></i>
+										<span>Корзина</span>
+									</a>
+                                        <div class="cart-dropdown">
+                                            <div class="cart-list">
+
+                                                <div class="product-widget">
+                                                    <div class="product-body1">
+                                                        <h5 class="product-name"><a href="{%  url 'users:registration' %}">Зарегестрируйтесь или войдите</a></h5>
+                                                    </div>
+                                                </div>
+                                        </div></div>
+                            {% endif %}
 								<!-- /Cart -->
 
 								<!-- Menu Toogle -->
@@ -188,10 +200,6 @@
 					<ul class="main-nav nav navbar-nav">
 						<li class="active"><a href="{% url 'index'  %}">На главную</a></li>
 						<li><a href="{% url 'products:index'  %}">Категории</a></li>
-						<li><a href="#">Laptops</a></li>
-						<li><a href="#">Smartphones</a></li>
-						<li><a href="#">Cameras</a></li>
-						<li><a href="#">Accessories</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
@@ -200,88 +208,15 @@
 			<!-- /container -->
 		</nav>
 		<!-- /NAVIGATION -->
-{%  block content %}    {% endblock %}
+        {%  block content %}    {% endblock %}
 
 		<footer id="footer">
-			<!-- top footer -->
-			<div class="section">
-				<!-- container -->
-				<div class="container">
-					<!-- row -->
-					<div class="row">
-						<div class="col-md-3 col-xs-6">
-							<div class="footer">
-								<h3 class="footer-title">About Us</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
-								<ul class="footer-links">
-									<li><a href="#"><i class="fa fa-map-marker"></i>1734 Stonecoal Road</a></li>
-									<li><a href="#"><i class="fa fa-phone"></i>+021-95-51-84</a></li>
-									<li><a href="#"><i class="fa fa-envelope-o"></i>email@email.com</a></li>
-								</ul>
-							</div>
-						</div>
-
-						<div class="col-md-3 col-xs-6">
-							<div class="footer">
-								<h3 class="footer-title">Categories</h3>
-								<ul class="footer-links">
-									<li><a href="#">Hot deals</a></li>
-									<li><a href="#">Laptops</a></li>
-									<li><a href="#">Smartphones</a></li>
-									<li><a href="#">Cameras</a></li>
-									<li><a href="#">Accessories</a></li>
-								</ul>
-							</div>
-						</div>
-
-						<div class="clearfix visible-xs"></div>
-
-						<div class="col-md-3 col-xs-6">
-							<div class="footer">
-								<h3 class="footer-title">Information</h3>
-								<ul class="footer-links">
-									<li><a href="#">About Us</a></li>
-									<li><a href="#">Contact Us</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-									<li><a href="#">Orders and Returns</a></li>
-									<li><a href="#">Terms & Conditions</a></li>
-								</ul>
-							</div>
-						</div>
-
-						<div class="col-md-3 col-xs-6">
-							<div class="footer">
-								<h3 class="footer-title">Service</h3>
-								<ul class="footer-links">
-									<li><a href="#">My Account</a></li>
-									<li><a href="#">View Cart</a></li>
-									<li><a href="#">Wishlist</a></li>
-									<li><a href="#">Track My Order</a></li>
-									<li><a href="#">Help</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<!-- /row -->
-				</div>
-				<!-- /container -->
-			</div>
-			<!-- /top footer -->
-
 			<!-- bottom footer -->
 			<div id="bottom-footer" class="section">
 				<div class="container">
 					<!-- row -->
 					<div class="row">
 						<div class="col-md-12 text-center">
-							<ul class="footer-payments">
-								<li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
-								<li><a href="#"><i class="fa fa-credit-card"></i></a></li>
-								<li><a href="#"><i class="fa fa-cc-paypal"></i></a></li>
-								<li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
-								<li><a href="#"><i class="fa fa-cc-discover"></i></a></li>
-								<li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
-							</ul>
 							<span class="copyright">
 								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 								Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
@@ -305,8 +240,25 @@
 		<script src="{% static 'js/jquery.zoom.min.js' %}"></script>
 		<script src="{% static 'js/main.js' %}"></script>
         <script src="{% static 'js/checkbox.js' %}"></script>
+        <script src="{% static 'js/updateURL.js' %}"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+    <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+    <script src="{% static 'js/infinite.min.js' %}"></script>
+    <script>
+        var infinite = new Waypoint.Infinite({
+            element: $('.infinite-container')[0],
 
+            offset: 'bottom-in-view',
+
+            onBeforePageLoad: function () {
+                $('.loading').show();
+            },
+            onAfterPageLoad: function () {
+                $('.loading').hide();
+            }
+
+        });
+    </script>
 	</body>
 </html>
