--- a/products/templates/products/store.html
+++ b/products/templates/products/store.html
@@ -42,24 +42,27 @@
 
                 <!-- /aside Widget -->
 
-                <!-- aside Widget -->
-                <div class="aside">
-                    <h3 class="aside-title">Price</h3>
-                    <div class="price-filter">
-                        <div id="price-slider"></div>
-                        <div class="input-number price-min">
-                            <input id="price-min" type="number">
-                            <span class="qty-up">+</span>
-                            <span class="qty-down">-</span>
-                        </div>
-                        <span>-</span>
-                        <div class="input-number price-max">
-                            <input id="price-max" type="number">
-                            <span class="qty-up">+</span>
-                            <span class="qty-down">-</span>
+                <form action="{% url 'products:index' %}" method="get" id="form1" name="theForm"> <!-- aside Widget -->
+                    <div class="aside">
+                        <h3 class="aside-title">Цена</h3>
+                        <div class="price-filter" >
+
+                            <div id="price-slider" min="{{ min_price }}" max="{{ max_price }}" ></div>
+                            <div class="input-number price-min">
+                                <input id="price-min" name=""  type="number" >
+                                <span class="qty-up">+</span>
+                                <span class="qty-down">-</span>
+                            </div>
+                            <span>-</span>
+                            <div class="input-number price-max">
+                                <input id="price-max" type="number">
+                                <span class="qty-up">+</span>
+                                <span class="qty-down">-</span>
+                            </div>
                         </div>
                     </div>
-                </div>
+
+
                 <!-- /aside Widget -->
 
                 <!-- aside Widget -->
@@ -98,37 +101,10 @@
 
             <!-- STORE -->
             <div id="store" class="col-md-9">
-                <!-- store top filter -->
-                <div class="store-filter clearfix">
-                    <div class="store-sort">
-                        <label>
-                            Sort By:
-                            <select class="input-select">
-                                <option value="0">Popular</option>
-                                <option value="1">Position</option>
-                            </select>
-                        </label>
-
-                        <label>
-                            Show:
-                            <select class="input-select">
-                                <option value="0">20</option>
-                                <option value="1">50</option>
-                            </select>
-                        </label>
-                    </div>
-                    <ul class="store-grid">
-                        <li class="active"><i class="fa fa-th"></i></li>
-                        <li><a href="#"><i class="fa fa-th-list"></i></a></li>
-                    </ul>
-                </div>
-                <!-- /store top filter -->
-
-                <!-- store products -->
-                <div class="row">
+               <div class="row infinite-container">
                 {% if object_list %}
                     {% for product in object_list %}
-                        <div class="col-md-4 col-xs-6">
+                        <div class="col-md-4 col-xs-6 infinite-item">
                             <div class="product">
                                 <div class="product-img">
                                     <img src="{{ product.image1 }}" alt="">
@@ -165,17 +141,11 @@
                 </div>
 
                 <!-- /store products -->
-
                 <!-- store bottom filter -->
                 <div class="store-filter clearfix">
-                    <span class="store-qty">Showing 20-100 products</span>
-                    <ul class="store-pagination">
-                        <li class="active">1</li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#"><i class="fa fa-angle-right"></i></a></li>
-                    </ul>
+                    {% if page_obj.has_next %}
+                        <a class="infinite-more-link" href="?page={{ page_obj.next_page_number }}{% if query %}{{ query }}{% endif %}" id="pag">next</a>
+                    {% endif %}
                 </div>
                 <!-- /store bottom filter -->
             </div>
