added .env and index page

--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -86,7 +86,7 @@
 						<div class="col-md-3">
 							<div class="header-logo">
 								<a href="{% url 'index'  %}" class="logo">
-									<img src="{% static '/img/logo.png' %}" alt="">
+									<img src="{% static '/img/Berserk_anime_logo.png' %}" alt="">
 								</a>
 							</div>
 						</div>
@@ -96,8 +96,8 @@
 						<div class="col-md-6">
 							<div class="header-search">
 								<form action="{% url 'products:index' %}" method="get" id="form1" name="theForm">
-									<input class="input1" placeholder="Search here" name="Search">
-                                    <button class="search-btn" onclick="this.form.submit()">Search</button>
+									<input class="input1" placeholder="Введите запрос" name="Search">
+                                    <button class="search-btn" onclick="this.form.submit()">Искать</button>
 								</form>
 							</div>
 						</div>
