--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,9 +1,9 @@
 {% extends 'products/base.html' %}
 {% load static %}
+{% load socialaccount %}
 {%  block content %}
-    <!-- container -->
+    <div class="main"
     <div class="container">
-        <!-- row -->
         <div class="row">
             <div class="col-md-12">
                 <div class="billing-details1">
@@ -26,23 +26,34 @@
                         {{ form.password }}
                         <button onclick="this.form.submit()" class="primary-btn cta-btn">Войти</button>
                     </form>
+                    <div class="list-group-item1">
+                        <p>Войти с помощью:</p>
+                        <a href="{% provider_login_url 'github'%}">
+                            <i class="fa fa-github  fa-3x" aria-hidden="true" style="color: #303030;"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa fa-google  fa-3x" aria-hidden="true" style="color: #303030;"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa fa-facebook  fa-3x" aria-hidden="true" style="color: #303030;"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa fa-vk  fa-3x" aria-hidden="true" style="color: #303030;"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa fa-twitter  fa-3x" aria-hidden="true" style="color: #303030;"></i>
+                        </a>
+                    </div>
+                    <p> </p>
+                    <p>Нет аккаунта?</p>
+                    <h4><a href="{% url 'users:registration'  %}">Зарегестрироваться</a></h4>
+                    <h4><a href="{% url 'users:password_reset'  %}">Забыли пароль?</a></h4>
+
                 </div>
             </div>
         </div>
         <!-- /row -->
     </div>
-        <!-- /container -->
-
-    <!-- SECTION -->
-    <div class="section">
-        <!-- container -->
-        <div class="container">
-            <!-- row -->
-            <div class="row">
-            </div>
-            <!-- /row -->
-        </div>
-        <!-- /container -->
     </div>
-    <!-- /SECTION -->
+
 {% endblock %}
