--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -31,6 +31,9 @@
 
                         <button onclick="this.form.submit()" class="primary-btn cta-btn">Зарегестрироваться</button>
                     </form>
+                    <p> </p>
+                    <p>Уже есть аккунт?</p>
+                    <h4><a href="{% url 'users:login'  %}">Войти</a></h4>
                 </div>
             </div>
         </div>
