--- a/products/templates/products/store.html
+++ b/products/templates/products/store.html
@@ -38,6 +38,7 @@
                         <label for="read-more-checker" class="read-more-button"></label>
                     {% endif %}
                 </div>
+            </form>
 
 
                 <!-- /aside Widget -->
@@ -71,7 +72,7 @@
                         <input type="checkbox" class="read-more-checker" id="read-more-checker1" />
                         <div class="limited">
                     {% endif %}
-                        <h3 class="aside-title">Brand</h3>
+                        <h3 class="aside-title">Бренд</h3>
                         <div class="checkbox-filter">
                             {% for brand in brands %}
                                 <div class="input-checkbox">
@@ -115,7 +116,7 @@
                                     {% endif %}
                                 </div>
                                 <div class="product-body">
-                                    <p class="product-category">{{ product.category }}</p>
+                                    <a class="product-category" href="?Category={{ product.category.id  }}" >{{ product.category }}</a>
                                 <div class="items-text1">
                                     <h3 class="product-name"><a href="{% url 'products:product' product.slug %}">
                                         {{ product.name }}</a></h3>
@@ -128,9 +129,10 @@
                                     {% endif %}
                                 </div>
                                 <div class="add-to-cart">
-                                    <button class="add-to-cart-btn" onclick="location.href=
-                                            '{% url 'products:basket_add' product.id %}'">
-                                        <i class="fa fa-shopping-cart"></i>Добавить</button>
+                                    <form action="{% url 'products:basket_add' product.id %}" method="get">
+                                        <button class="add-to-cart-btn" onclick=this.form.submit()>
+                                            <i class="fa fa-shopping-cart"></i>Добавить</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
