--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -90,7 +90,7 @@
                                         </div>
                                         <div class="add-to-cart">
                                             <form action="{% url 'products:basket_add' product.id %}" method="get">
-                                            <button class="add-to-cart-btn" onclick=this.form.submit()>
+                                            <button class="add-to-cart-btn">
                                             <i class="fa fa-shopping-cart"></i>Добавить</button>
                                             </form>
                                         </div>
@@ -159,7 +159,7 @@
                                         </div>
                                         <div class="add-to-cart">
                                             <form action="{% url 'products:basket_add' product.id %}" method="get">
-                                            <button class="add-to-cart-btn" onclick=this.form.submit()>
+                                            <button class="add-to-cart-btn">
                                             <i class="fa fa-shopping-cart"></i>Добавить</button>
                                             </form>
                                         </div>
