--- a/main/templates/socialaccount/login.html
+++ b/main/templates/socialaccount/login.html
@@ -16,7 +16,7 @@
                     {% endif %}
                     <form method="post">
                       {% csrf_token %}
-                      <button type="submit" class="primary-btn cta-btn" onclick="this.form.submit()">{% trans "Continue" %}</button>
+                      <button type="submit" class="primary-btn cta-btn">{% trans "Continue" %}</button>
                     </form>
                 </div></div></div></div></div>
 {% endblock %}
