--- a/users/templates/users/new_password.html
+++ b/users/templates/users/new_password.html
@@ -28,7 +28,7 @@
                                 </div>
                             </div>
                         {% endif %}
-                        <button onclick="this.form.submit()" class="primary-btn cta-btn">Сбросить пароль</button>
+                        <button class="primary-btn cta-btn">Сбросить пароль</button>
                     </form>
                 </div>
             </div>
