--- a/products/templates/products/store.html
+++ b/products/templates/products/store.html
@@ -130,7 +130,7 @@
                                 </div>
                                 <div class="add-to-cart">
                                     <form action="{% url 'products:basket_add' product.id %}" method="get">
-                                        <button class="add-to-cart-btn" onclick=this.form.submit()>
+                                        <button class="add-to-cart-btn" >
                                             <i class="fa fa-shopping-cart"></i>Добавить</button>
                                     </form>
                                 </div>
