--- a/orders/templates/orders/canceled.html
+++ b/orders/templates/orders/canceled.html
@@ -1,14 +1,13 @@
 {% extends 'products/base.html' %}
 {% load static %}
 {%  block content %}
-    <head>
-      <title>Checkout canceled</title>
-      <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-      <section>
-        <p>Forgot to add something to your cart? Shop around then come back to pay!</p>
-      </section>
-    </body>
-    </html>
+<div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="billing-details1">
+                        <p>Заказ отменён:(</p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
