--- a/orders/templates/orders/success.html
+++ b/orders/templates/orders/success.html
@@ -1,16 +1,13 @@
 {% extends 'products/base.html' %}
 {% load static %}
 {%  block content %}
-<head>
-  <title>Thanks for your order!</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <section>
-    <p>
-      We appreciate your business! If you have any questions, please email
-      <a href="mailto:orders@example.com">orders@example.com</a>.
-    </p>
-  </section>
-</body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="billing-details1">
+                        <p>Заказ создан!</p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
